--- a/calendarios.html
+++ b/calendarios.html
@@ -394,9 +394,6 @@
       <a href="https://www.instagram.com/hotel_moliceiro/" target="_blank">
         <img src="p_hotelmoliceiro.png" alt="hotelmoliceiro">
       </a>
-      <a href="https://www.instagram.com/tgvs_vougafrio/" target="_blank">
-        <img src="p_vougafrio.png" alt="vougafrio">
-      </a>
       <a href="https://www.instagram.com/andreia.professional/" target="_blank">
         <img src="p_andreia.png" alt="andreia">
       </a>
@@ -408,6 +405,9 @@
       </a>
       <a href="https://www.instagram.com/municipiodamurtosa/" target="_blank">
         <img src="p_cmm.png" alt="Camara Municpal da Murtosa">
+      </a>
+      <a href="https://www.instagram.com/associacaodevoleiboldoporto/" target="_blank">
+        <img src="p_avp.png" alt="Associação de Voleibol do Porto">
       </a>
       <!-- Repetição para efeito contínuo -->
       <a href="https://www.instagram.com/maribartorreira/" target="_blank">
@@ -427,9 +427,6 @@
       </a>
       <a href="https://www.instagram.com/hotel_moliceiro/" target="_blank">
         <img src="p_hotelmoliceiro.png" alt="hotelmoliceiro1">
-      </a>
-      <a href="https://www.instagram.com/tgvs_vougafrio/" target="_blank">
-        <img src="p_vougafrio.png" alt="vougafrio1">
       </a>
       <a href="https://www.instagram.com/andreia.professional/" target="_blank">
         <img src="p_andreia.png" alt="andreia1">
@@ -460,6 +457,9 @@
 
   <p>
     &copy; Torneio de Voleibol de Praia no Maribar |
+    <a href="apresentacaoSabManha.html">📊 Apresentação Sabado Manha</a> |
+    <a href="apresentacaoSab.html">📊 Apresentação Sabado</a> |
+    <a href="apresentacaoDom.html">📊 Apresentação Domingo</a> |
     <a href="apresentacao.html">📊 Apresentação</a> |
     <a href="calendarios1.html">📊 Calendario</a> |
     Contacto: <a href="mailto:pedrofacarvalho@gmail.com">pedrofacarvalho@gmail.com</a>
