--- a/galeria.html
+++ b/galeria.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -16,7 +17,7 @@
     .galeria-grid img {
       width: 100%;
       border-radius: 8px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
       transition: transform 0.2s ease;
     }
 
@@ -25,6 +26,7 @@
     }
   </style>
 </head>
+
 <body>
   <header>
     <nav>
@@ -83,9 +85,6 @@
         <a href="https://www.instagram.com/hotel_moliceiro/" target="_blank">
           <img src="p_hotelmoliceiro.png" alt="hotelmoliceiro">
         </a>
-        <a href="https://www.instagram.com/tgvs_vougafrio/" target="_blank">
-          <img src="p_vougafrio.png" alt="vougafrio">
-        </a>
         <a href="https://www.instagram.com/andreia.professional/" target="_blank">
           <img src="p_andreia.png" alt="andreia">
         </a>
@@ -94,6 +93,9 @@
         </a>
         <a href="https://www.instagram.com/leixoessportclub/" target="_blank">
           <img src="p_leixoes.png" alt="leixoes">
+        </a>
+        <a href="https://www.instagram.com/associacaodevoleiboldoporto/" target="_blank">
+          <img src="p_avp.png" alt="Associação de Voleibol do Porto">
         </a>
 
         <!-- Repetição para efeito contínuo -->
@@ -114,9 +116,6 @@
         </a>
         <a href="https://www.instagram.com/hotel_moliceiro/" target="_blank">
           <img src="p_hotelmoliceiro.png" alt="hotelmoliceiro1">
-        </a>
-        <a href="https://www.instagram.com/tgvs_vougafrio/" target="_blank">
-          <img src="p_vougafrio.png" alt="vougafrio1">
         </a>
         <a href="https://www.instagram.com/andreia.professional/" target="_blank">
           <img src="p_andreia.png" alt="andreia1">
@@ -144,12 +143,14 @@
   </main>
 
   <footer>
-    <p>&copy; Torneio de Voleibol de Praia no Maribar | Contacto: <a href="mailto:pedrofacarvalho@gmail.com">pedrofacarvalho@gmail.com</a></p>
+    <p>&copy; Torneio de Voleibol de Praia no Maribar | Contacto: <a
+        href="mailto:pedrofacarvalho@gmail.com">pedrofacarvalho@gmail.com</a></p>
     <div class="social-icons">
       <a href="https://www.facebook.com/profile.php?id=100093335237350" target="_blank" aria-label="Facebook">
         <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/facebook.svg" alt="Facebook" width="24">
       </a>
-      <a href="https://www.instagram.com/torneiomaribarvolley?igsh=NncxcXVhNWp2OTh6" target="_blank" aria-label="Instagram">
+      <a href="https://www.instagram.com/torneiomaribarvolley?igsh=NncxcXVhNWp2OTh6" target="_blank"
+        aria-label="Instagram">
         <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/instagram.svg" alt="Instagram" width="24">
       </a>
     </div>
@@ -162,4 +163,5 @@
     }
   </script>
 </body>
+
 </html>
