--- a/index.html
+++ b/index.html
@@ -143,6 +143,9 @@
         <a href="https://www.instagram.com/municipiodamurtosa/" target="_blank">
           <img src="p_cmm.png" alt="Camara Municpal da Murtosa">
         </a>
+        <a href="https://www.instagram.com/associacaodevoleiboldoporto/" target="_blank">
+          <img src="p_avp.png" alt="Associação de Voleibol do Porto">
+        </a>
 
         <!-- Repetição para efeito contínuo -->
         <a href="https://www.instagram.com/maribartorreira/" target="_blank">
