--- a/informacoes.html
+++ b/informacoes.html
@@ -74,21 +74,23 @@
       </ul>
 
       <h3>🏕️ Alojamento</h3>
-      <p>O <strong>Camping Torreira Park</strong>, a apenas 800 metros da praia, oferece descontos para os participantes.</p>
-      <p>Se tiveres acompanhantes que <strong>não jogam</strong>, indica essa informação nas observações da inscrição.</p>
+      <p>O <strong>Camping Torreira Park</strong>, a apenas 800 metros da praia, oferece descontos para os
+        participantes.</p>
+      <p>Se tiveres acompanhantes que <strong>não jogam</strong>, indica essa informação nas observações da inscrição.
+      </p>
 
       <h3>📥 Inscrições</h3>
-     
-        <strong>✅ Inscrições Encerradas!</strong><br>
-        Alcançámos o número máximo de duplas:
-        <ul style="margin-top: 5px;">
-          <li>64 duplas <strong>masculinas</strong></li>
-          <li>64 duplas <strong>mistas</strong></li>
-          <li>32 duplas <strong>femininas</strong></li>
-          <li>8 duplas <strong>sub-16</strong></li>
-        </ul>
-        Obrigado a todos pela enorme adesão! Encontramo-nos no <strong>dia 2 de agosto às 8h30</strong> 🌞🏐
-  
+
+      <strong>✅ Inscrições Encerradas!</strong><br>
+      Alcançámos o número máximo de duplas:
+      <ul style="margin-top: 5px;">
+        <li>64 duplas <strong>masculinas</strong></li>
+        <li>64 duplas <strong>mistas</strong></li>
+        <li>32 duplas <strong>femininas</strong></li>
+        <li>8 duplas <strong>sub-16</strong></li>
+      </ul>
+      Obrigado a todos pela enorme adesão! Encontramo-nos no <strong>dia 2 de agosto às 8h30</strong> 🌞🏐
+
     </section>
   </main>
 
@@ -119,9 +121,6 @@
       <a href="https://www.instagram.com/hotel_moliceiro/" target="_blank">
         <img src="p_hotelmoliceiro.png" alt="hotelmoliceiro">
       </a>
-      <a href="https://www.instagram.com/tgvs_vougafrio/" target="_blank">
-        <img src="p_vougafrio.png" alt="vougafrio">
-      </a>
       <a href="https://www.instagram.com/andreia.professional/" target="_blank">
         <img src="p_andreia.png" alt="andreia">
       </a>
@@ -133,6 +132,9 @@
       </a>
       <a href="https://www.instagram.com/municipiodamurtosa/" target="_blank">
         <img src="p_cmm.png" alt="Camara Municpal da Murtosa">
+      </a>
+      <a href="https://www.instagram.com/associacaodevoleiboldoporto/" target="_blank">
+        <img src="p_avp.png" alt="Associação de Voleibol do Porto">
       </a>
 
       <!-- Repetição para efeito contínuo -->
@@ -154,9 +156,7 @@
       <a href="https://www.instagram.com/hotel_moliceiro/" target="_blank">
         <img src="p_hotelmoliceiro.png" alt="hotelmoliceiro1">
       </a>
-      <a href="https://www.instagram.com/tgvs_vougafrio/" target="_blank">
-        <img src="p_vougafrio.png" alt="vougafrio1">
-      </a>
+
       <a href="https://www.instagram.com/andreia.professional/" target="_blank">
         <img src="p_andreia.png" alt="andreia1">
       </a>
@@ -165,6 +165,9 @@
       </a>
       <a href="https://www.instagram.com/leixoessportclub/" target="_blank">
         <img src="p_leixoes.png" alt="leixoes1">
+      </a>
+      <a href="https://www.instagram.com/associacaodevoleiboldoporto/" target="_blank">
+        <img src="p_avp.png" alt="Associação de Voleibol do Porto1">
       </a>
     </div>
   </section>
