--- a/sobre-nos.html
+++ b/sobre-nos.html
@@ -82,9 +82,6 @@
       <a href="https://www.instagram.com/hotel_moliceiro/" target="_blank">
         <img src="p_hotelmoliceiro.png" alt="hotelmoliceiro">
       </a>
-      <a href="https://www.instagram.com/tgvs_vougafrio/" target="_blank">
-        <img src="p_vougafrio.png" alt="vougafrio">
-      </a>
       <a href="https://www.instagram.com/andreia.professional/" target="_blank">
         <img src="p_andreia.png" alt="andreia">
       </a>
@@ -93,6 +90,9 @@
       </a>
       <a href="https://www.instagram.com/leixoessportclub/" target="_blank">
         <img src="p_leixoes.png" alt="leixoes">
+      </a>
+      <a href="https://www.instagram.com/associacaodevoleiboldoporto/" target="_blank">
+        <img src="p_avp.png" alt="Associação de Voleibol do Porto">
       </a>
 
       <!-- Repetição para efeito contínuo -->
@@ -113,9 +113,6 @@
       </a>
       <a href="https://www.instagram.com/hotel_moliceiro/" target="_blank">
         <img src="p_hotelmoliceiro.png" alt="hotelmoliceiro1">
-      </a>
-      <a href="https://www.instagram.com/tgvs_vougafrio/" target="_blank">
-        <img src="p_vougafrio.png" alt="vougafrio1">
       </a>
       <a href="https://www.instagram.com/andreia.professional/" target="_blank">
         <img src="p_andreia.png" alt="andreia1">
