--- a/edicoes-passadas.html
+++ b/edicoes-passadas.html
@@ -95,9 +95,6 @@
       <a href="https://www.instagram.com/hotel_moliceiro/" target="_blank">
         <img src="p_hotelmoliceiro.png" alt="hotelmoliceiro">
       </a>
-      <a href="https://www.instagram.com/tgvs_vougafrio/" target="_blank">
-        <img src="p_vougafrio.png" alt="vougafrio">
-      </a>
       <a href="https://www.instagram.com/andreia.professional/" target="_blank">
         <img src="p_andreia.png" alt="andreia">
       </a>
@@ -109,6 +106,9 @@
       </a>
       <a href="https://www.instagram.com/municipiodamurtosa/" target="_blank">
         <img src="p_cmm.png" alt="Camara Municpal da Murtosa">
+      </a>
+      <a href="https://www.instagram.com/associacaodevoleiboldoporto/" target="_blank">
+        <img src="p_avp.png" alt="Associação de Voleibol do Porto">
       </a>
       <!-- Repetição para efeito contínuo -->
       <a href="https://www.instagram.com/maribartorreira/" target="_blank">
@@ -129,9 +129,7 @@
       <a href="https://www.instagram.com/hotel_moliceiro/" target="_blank">
         <img src="p_hotelmoliceiro.png" alt="hotelmoliceiro1">
       </a>
-      <a href="https://www.instagram.com/tgvs_vougafrio/" target="_blank">
-        <img src="p_vougafrio.png" alt="vougafrio1">
-      </a>
+
       <a href="https://www.instagram.com/andreia.professional/" target="_blank">
         <img src="p_andreia.png" alt="andreia1">
       </a>
