--- a/apresentacaoSabManha.html
+++ b/apresentacaoSabManha.html
@@ -57,10 +57,10 @@
 
   <script>
     const links = [
-      "https://docs.google.com/spreadsheets/d/1tCgya4djEggY5RZ5_5tF2sJP-OA-NfAIBRmh5m85Z_0/edit#gid=2067354137",<!--Mix Masc-->
-      "https://docs.google.com/spreadsheets/d/1tCgya4djEggY5RZ5_5tF2sJP-OA-NfAIBRmh5m85Z_0/edit#gid=1057529267",< !--Mix Grupos-- >
-      "https://docs.google.com/spreadsheets/d/1tCgya4djEggY5RZ5_5tF2sJP-OA-NfAIBRmh5m85Z_0/edit#gid=381487257", < !--Fem Grupos-- >
-      "https://docs.google.com/spreadsheets/d/1tCgya4djEggY5RZ5_5tF2sJP-OA-NfAIBRmh5m85Z_0/edit?gid=1946814567" < ! --Sub16-->
+      "https://docs.google.com/spreadsheets/d/1tCgya4djEggY5RZ5_5tF2sJP-OA-NfAIBRmh5m85Z_0/edit#gid=2067354137",//Mix Masc-->
+      "https://docs.google.com/spreadsheets/d/1tCgya4djEggY5RZ5_5tF2sJP-OA-NfAIBRmh5m85Z_0/edit#gid=1057529267",//Mix Grupos-- >
+      "https://docs.google.com/spreadsheets/d/1tCgya4djEggY5RZ5_5tF2sJP-OA-NfAIBRmh5m85Z_0/edit#gid=381487257", //Fem Grupos-- >
+      "https://docs.google.com/spreadsheets/d/1tCgya4djEggY5RZ5_5tF2sJP-OA-NfAIBRmh5m85Z_0/edit?gid=1946814567" //Sub16-->
     ];
     let index = 0;
 
@@ -79,7 +79,7 @@
       document.getElementById("sheetFrame").src = links[index];
     }
 
-    setInterval(updateIframe, 50000);
+    setInterval(updateIframe, 30000);
 
     function toggleFullScreen() {
       if (!document.fullscreenElement) {
